ADD-- Se realiza la kata9, kata10, kata11